--- a/PJ1/style.css
+++ b/PJ1/style.css
@@ -1,55 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Cherokee:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Explora&display=swap');
+
 body{
     padding: 0px;
     margin: 0px;
 }
 header{
-    width: 100%;
-    height: 100px;
+    width: 100vw;    
     background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
-    padding: 10px;
+    padding-top: 50px;
+    font-variant: small-caps;
+    font-size:3vw;
+}
+header > p {
+    padding-bottom:50px;
 }
 main{
     width: 100%;
-    height: 600px;
-    background-color: rgb(120, 193, 116);
-    text-align: center;
+    min-height: 100vh;    
+    background-color: rgb(255, 255, 255);    
     padding: 10px;
-    
 }
-h1{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 50px;
-    margin-top: 30px;
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 10px;
+    font-family: 'Explora', cursive;
+    font-size: 4.5vw;
+    font-weight: bolder;
 }
-p{
-    margin-bottom: 100px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-footer{
-    background-color: black;
-    padding: 5px;
-    color: white;
-    text-align: center;
-    font-size: 20px;
-}
-a::before{
-    text-decoration:none;
-    color: white;
-}
+
 a:hover{
     text-decoration:none;
-    color:white;
+    color:rgb(255, 255, 255);
 }
 a:visited{
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration:none;
 }
 a :active{
     text-decoration: none;
 }
 a:link{
-    text-decoration: none;
+    text-decoration:none;
     color: white;
+}
+section >.nor{
+    background-color: white;
+    color: black;
+
+}
+section >.img{
+    background-color: rgb(90, 95, 99);
+    color:white;
+}
+section > .img > p{
+    background-color: rgba(0, 0, 0, 0.375);
+   display: inline-block;
+   padding: 5px;
+
+}
+footer{
+    background-color: black;
+    padding: 2px;
+    color: white;
+    text-align: center;
+    font-size: 20px;
 }
